# milvus-lite-v2

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: stability.yml  test.yml
docs/: MVP.md  compaction-design.md  feature-comparison.md  filter-design.md  fts-design.md  funcchain-design.md  grpc-adapter-design.md  index-design.md  metadata-design.md  modules.md  research.md  roadmap.md  search-iterator-design.md  storage-design.md  wal-design.md  write-pipeline.md
examples/: m10_demo.py  m2_demo.py  m3_demo.py  m4_demo.py  m5_demo.py  m6_demo.py  m7_demo.py  m8_demo.py  m9_demo.py
litevecdb/: __init__.py  constants.py  db.py  exceptions.py
litevecdb/adapter/grpc/: __init__.py  __main__.py  cli.py  errors.py  reranker.py  server.py  servicer.py
litevecdb/analyzer/: __init__.py  factory.py  jieba_analyzer.py  protocol.py  sparse.py  standard.py
litevecdb/embedding/: __init__.py  factory.py  openai_provider.py
litevecdb/engine/: __init__.py  collection.py  compaction.py  flush.py  recovery.py
litevecdb/index/: __init__.py  brute_force.py  factory.py  faiss_hnsw.py  faiss_hnsw_sq.py  faiss_ivf_flat.py  faiss_ivf_sq8.py  protocol.py  sparse_inverted.py  spec.py
litevecdb/rerank/: __init__.py  cohere_provider.py  factory.py
litevecdb/schema/: __init__.py  arrow_builder.py  persistence.py  types.py  validation.py
litevecdb/search/: assembler.py  bitmap.py  distance.py  executor.py  executor_indexed.py
litevecdb/search/filter/: __init__.py  ast.py  cache.py  exceptions.py  parser.py  semantic.py  tokens.py
litevecdb/storage/: __init__.py  data_file.py  delta_file.py  delta_index.py  manifest.py  memtable.py  segment.py  wal.py
milvus_lite/: __init__.py  db.py  exceptions.py  server_manager.py
milvus_lite/adapter/grpc/: __main__.py  cli.py  servicer.py
milvus_lite/engine/: collection.py
milvus_lite/function/: __init__.py  builder.py  chain.py  dataframe.py  types.py
milvus_lite/function/expr/: __init__.py  decay_expr.py  embedding_expr.py  rerank_model.py  round_decimal.py  score_combine.py
milvus_lite/function/ops/: __init__.py  boost_op.py  group_by_op.py  limit_op.py  map_op.py  merge_op.py  select_op.py  sort_op.py
milvus_lite/index/: factory.py
milvus_lite/rerank/: __init__.py  boost.py
milvus_lite/schema/: validation.py
milvus_lite/search/: assembler.py  bitmap.py  executor_indexed.py
milvus_lite/search/filter/: ast.py
milvus_lite/storage/: memtable.py
plan/: CLAUDE.md  MVP.md  filter-design.md  fts-design.md  grpc-adapter-design.md  index-design.md  modules.md  roadmap.md  search-iterator-design.md  wal-design.md
tests/: test_db.py  test_smoke_e2e.py
tests/adapter/: conftest.py  test_against_milvus.py  test_array_field.py  test_auto_id.py  test_boost_ranker.py  test_crud_alignment.py  test_crud_alignment_milvus.py  test_group_by.py  test_grpc_cli.py  test_grpc_collection_lifecycle.py  test_grpc_crud.py  test_grpc_error_mapping.py  test_grpc_fts.py  test_grpc_index.py  test_grpc_partition_key.py  test_grpc_quickstart.py  test_grpc_search.py  test_grpc_server_startup.py  test_grpc_translators_records.py  test_grpc_translators_schema.py  test_hybrid_search.py  test_issue_19_20.py  test_issue_fixes.py  test_iterator.py  test_milvus_compat.py  test_milvus_compat_crud.py  test_milvus_compat_v2.py  test_milvus_compat_v3.py  test_milvus_fts_compat.py  test_milvus_lite_compat.py  test_multi_index.py  test_offset.py  test_range_search.py  test_server_restart.py
tests/analyzer/: test_analyzer.py  test_sparse.py
tests/benchmark/: bench_litevecdb.py  test_performance.py
tests/compatibility/: test_milvus_advanced.py  test_milvus_compat.py  test_milvus_edge_cases.py  test_milvus_final.py  test_milvus_misc.py  test_partial_update.py  test_partition_key.py
tests/embedding/: test_text_embedding.py
tests/engine/: test_anns_field.py  test_background_flush.py  test_collection.py  test_collection_delete.py  test_collection_describe.py  test_collection_faiss_e2e.py  test_collection_filter.py  test_collection_index_persistence.py  test_collection_load_release.py  test_collection_partition.py  test_collection_search_output_fields.py  test_compaction.py  test_compaction_integration.py  test_crash_recovery.py  test_delete_consistency.py  test_flush.py  test_index_longrun.py  test_insert_delete_insert.py  test_operation.py  test_partition_key.py  test_recovery.py  test_sparse_only_collection.py  test_tombstone_gc.py  test_upsert_partial.py
tests/function/: test_bm25_expr.py  test_builder_ingestion.py  test_builder_rerank.py  test_chain.py  test_decay_expr.py  test_embedding_expr.py  test_group_by_op.py  test_limit_op.py  test_map_op.py  test_merge_op.py  test_rerank_chain_e2e.py  test_rerank_model_expr.py  test_round_decimal.py  test_score_combine.py  test_select_op.py  test_sort_op.py  test_types.py
tests/index/: test_brute_force_index.py  test_faiss_hnsw.py  test_index_differential.py  test_index_ivf_flat.py  test_index_spec.py  test_quantized_indexes.py  test_segment_index_attach.py  test_sparse_inverted.py
tests/rerank/: test_boost_ranker.py  test_rerank.py
tests/schema/: test_arrow_builder.py  test_fts_schema.py  test_persistence.py  test_types.py  test_validation.py
tests/search/: test_bitmap.py  test_distance.py  test_executor.py  test_executor_with_index.py  test_text_match.py
tests/search/filter/: test_cache.py  test_e2e.py  test_parser.py  test_semantic.py  test_tokens.py
tests/storage/: test_data_file.py  test_delta_index.py  test_manifest.py  test_manifest_v2_compat.py  test_memtable.py  test_segment.py  test_wal.py
(+10 files in other folders)
