[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litevecdb"
version = "0.1.0"
description = "A local embedded vector database — local version of Milvus"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "LiteVecDB Contributors"},
]
keywords = ["vector", "database", "embedding", "milvus", "search", "bm25"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyarrow>=15.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/junjiejiangjjj/milvus-lite-v2"
Repository = "https://github.com/junjiejiangjjj/milvus-lite-v2"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
faiss = [
    # Phase 9.5: FAISS HNSW vector index. Without this, the engine
    # falls back to BruteForceIndex (slower but functional). 1.7.4 is
    # the first version with stable macOS arm64 wheels and
    # SearchParametersHNSW(sel=...) support.
    "faiss-cpu>=1.7.4",
]
chinese = [
    "jieba>=0.42",
]
grpc = [
    # Phase 10: gRPC adapter for pymilvus protocol compatibility.
    # We import proto stubs from pymilvus.grpc_gen rather than
    # generating our own — this guarantees wire compatibility with
    # whichever pymilvus version is installed and tracks pymilvus
    # protocol updates automatically.
    "pymilvus>=2.4",
    "grpcio>=1.50",
]

[project.scripts]
# Phase 10: CLI entry for the gRPC server.
# Enabled when installed with the [grpc] extra.
litevecdb-grpc = "litevecdb.adapter.grpc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests that exercise resource boundedness over many ops",
]
